frontend auth with jwt

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Web
 server.port=8080
 
+# FOR SWAGGER SPRING DOCS
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
 # FOR CONCURRENT REQUESTS HANDLING
 thread.pool.size=5
